# onestep

./: .dockerignore  .gitignore  .onestep.yml.example  404.html  CHANGELOG.md  CNAME  IMPROVEMENTS.md  LICENSE  MIGRATION-0.5-to-1.0.0.md  MIGRATION-0.5-to-1.0.0a2.md  MIGRATION-0.5-to-1.0a1.md  Makefile  PRIORITY.md  README.md  README.zh-CN.md  docker-compose.integration.yml  hashmap.json  index.html  manifest.webmanifest  package-lock.json  pyproject.toml  sw.js  tags.html  workbox-4dbe5713.js  workbox-e7c00082.js
apps/control-plane/: .dockerignore  .env.deploy.example  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  RELEASE.md  alembic.ini  docker-compose.deploy.yml  docker-compose.nodb.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/control-plane/.github/workflows/: ci.yml  release-smoke.yml
apps/control-plane/backend/alembic/: env.py  script.py.mako
apps/control-plane/backend/tests/: conftest.py  test_agent_ingestion.py  test_agent_install.py  test_agent_session_service.py  test_agent_ws.py  test_command_rbac.py  test_connectors_api.py  test_console_auth.py  test_cors.py  test_create_local_user_script.py  test_datetime_serialization.py  test_desktop_entry.py  test_e2e_workflow.py  test_health.py  test_local_auth.py  test_migrations.py  test_notification_helpers.py  test_notification_service.py  test_notifications_api.py  test_pipeline_builder_api.py  test_pipeline_builder_compiler.py  test_prometheus_exporter.py  test_query_api.py  test_query_support.py  test_readiness.py  test_resource_catalog_api.py  test_retention.py  test_settings.py  test_ui_assets.py  test_ui_stream.py  test_worker_agent_api.py  test_worker_agent_models.py  test_worker_agent_ws.py  test_worker_compiler.py  test_worker_leadership.py  test_workers_api.py
apps/control-plane/design-plans/: 2026-07-22-service-detail-identity.md  2026-07-22-service-row-detail-label.md  2026-07-22-task-failed-status-label.md
apps/control-plane/desktop/: electron-builder.config.cjs  electron.vite.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/control-plane/desktop/e2e/: desktop-smoke.spec.ts
apps/control-plane/desktop/pyinstaller/: onestep-control-plane-api.spec
apps/control-plane/desktop/tests/: status.test.ts
apps/control-plane/docker/nginx/: default.conf  write-runtime-config.sh
apps/control-plane/docs/: macos-desktop-rewrite.md
apps/control-plane/docs/migrations/: ws-agent-cutover.md
apps/control-plane/docs/plans/: 2026-03-19-onestep-control-plane-product-ui-brief.md  2026-03-19-onestep-stable-instance-identity.md  2026-03-24-onestep-control-plane-apple-workbench-design.md  2026-04-30-notification-webhook-design.md  2026-05-15-onestep-control-plane-enterprise-readiness-three-releases.md
apps/control-plane/docs/protocols/: agent-ws-protocol.md
apps/control-plane/docs/roadmaps/: onestep-ui-control-roadmap.md
apps/control-plane/docs/runbooks/: alerts.md  backup-restore.md  release.md  rollback.md
apps/control-plane/frontend/: .env.example  index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/control-plane/frontend/e2e/: app.spec.ts  auth.spec.ts  notification-checkbox.spec.ts
apps/control-plane/frontend/src/: App.test.ts  App.tsx  api.controlPlaneData.test.ts  api.notifications.test.ts  api.ts  appRoute.test.ts  appRoute.ts  i18n.test.ts  i18n.tsx  index.css  initialData.ts  main.tsx  styles.css  types.ts
apps/control-plane/scripts/: backup-postgres.sh  create_local_admin.py  create_local_user.py  release-preflight.sh  restore-postgres.sh  run-retention.py  run-smoke.sh  start-local.sh
plugins/onestep-control-plane/: README.md  pyproject.toml
plugins/onestep-control-plane/src/onestep_control_plane/: __init__.py  reporter.py  ws.py
plugins/onestep-control-plane/tests/: control_plane_testkit.py  test_control_plane_demo_example.py  test_control_plane_plugin.py  test_control_plane_reconnect.py  test_control_plane_reporter.py  test_control_plane_ws.py  test_heartbeat_reporter.py  test_http_sink_topology.py  test_replica_identity.py  test_runtime_descriptor.py  test_runtime_identity.py  test_sync_reporter.py
plugins/onestep-feishu-bitable/: README.md  pyproject.toml
plugins/onestep-feishu-bitable/src/onestep_feishu_bitable/: __init__.py  connector.py  resources.py
plugins/onestep-feishu-bitable/tests/: test_feishu_bitable_connector.py  test_feishu_bitable_plugin.py
plugins/onestep-kafka/: README.md  pyproject.toml
plugins/onestep-kafka/src/onestep_kafka/: __init__.py  connector.py  resilience.py  resources.py
plugins/onestep-kafka/tests/: test_kafka_ack_tracker.py  test_kafka_connector.py  test_kafka_plugin.py  test_kafka_runtime_contract.py
plugins/onestep-kafka/tests/integration/: test_kafka_live.py
plugins/onestep-mysql/: README.md  pyproject.toml
plugins/onestep-mysql/src/onestep_mysql/: __init__.py  connector.py  resilience.py  resources.py  state_sqlalchemy.py
plugins/onestep-mysql/tests/: test_mysql_binlog.py  test_mysql_incremental.py  test_mysql_plugin.py  test_mysql_runtime_contract.py  test_mysql_table_queue.py  test_state_sqlalchemy.py
plugins/onestep-mysql/tests/integration/: test_mysql_live.py
plugins/onestep-postgres/: README.md  pyproject.toml
plugins/onestep-postgres/src/onestep_postgres/: __init__.py  connector.py  resilience.py  resources.py  state_sqlalchemy.py
plugins/onestep-postgres/tests/: test_postgres_incremental.py  test_postgres_plugin.py  test_postgres_runtime_contract.py  test_postgres_table_queue.py  test_state_sqlalchemy.py
plugins/onestep-rabbitmq/: README.md  pyproject.toml
plugins/onestep-rabbitmq/tests/: test_rabbitmq_connector.py  test_rabbitmq_plugin.py
plugins/onestep-redis/: README.md  pyproject.toml
plugins/onestep-redis/tests/: test_redis_connector.py  test_redis_plugin.py
plugins/onestep-sqs/: README.md  pyproject.toml
plugins/onestep-sqs/tests/: test_sqs_connector.py  test_sqs_plugin.py  test_sqs_runtime_contract.py
(+783 files in other folders)
