[project]
name = "onestep"
version = "1.0.1"
description = "Async task runtime for queue, polling, schedule, and webhook workloads."
authors = [
    { name = "miclon", email = "jcnd@163.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["async", "queue", "scheduler", "tasks", "webhook", "worker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
yaml = [
    "PyYAML>=6.0",
]
mysql = [
    "SQLAlchemy>=2.0.0",
    "PyMySQL>=1.1.0",
]
rabbitmq = [
    "aio-pika>=9.0.0",
]
redis = [
    "redis>=4.2.0",
]
sqs = [
    "boto3>=1.34.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0.0",
]
integration = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "PyYAML>=6.0",
    "aio-pika>=9.0.0",
    "boto3>=1.34.0",
    "redis>=4.2.0",
    "SQLAlchemy>=2.0.0",
    "PyMySQL>=1.1.0",
]
all = [
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0.0",
    "PyMySQL>=1.1.0",
    "aio-pika>=9.0.0",
    "boto3>=1.34.0",
    "redis>=4.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0.0",
    "PyMySQL>=1.1.0",
    "aio-pika>=9.0.0",
    "boto3>=1.34.0",
    "redis>=4.2.0",
]

[project.scripts]
onestep = "onestep.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onestep"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/Makefile",
    "/deploy",
    "/docker-compose.integration.yml",
    "/example",
    "/pyproject.toml",
    "/scripts",
    "/src/onestep",
    "/tests",
]

[tool.pytest.ini_options]
markers = [
    "integration: live infrastructure tests",
]
