[project]
name = "onestep"
version = "1.4.0"
description = "Async task runtime for queue, polling, schedule, and webhook workloads."
authors = [
    { name = "miclon", email = "jcnd@163.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["async", "queue", "scheduler", "tasks", "webhook", "worker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
control-plane = [
    "websockets>=12.0",
]
yaml = [
    "PyYAML>=6.0",
]
mysql = [
    "onestep-mysql>=0.1.0",
]
rabbitmq = [
    "aio-pika>=9.0.0",
]
redis = [
    "redis>=4.2.0",
]
sqs = [
    "onestep-sqs>=0.1.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "PyYAML>=6.0",
]
integration = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "PyYAML>=6.0",
    "aio-pika>=9.0.0",
    "redis>=4.2.0",
    "onestep-mysql>=0.1.0",
    "onestep-sqs>=0.1.0",
]
all = [
    "websockets>=12.0",
    "PyYAML>=6.0",
    "aio-pika>=9.0.0",
    "redis>=4.2.0",
    "onestep-mysql>=0.1.0",
    "onestep-sqs>=0.1.0",
]
dev = [
    "websockets>=12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "PyYAML>=6.0",
    "aio-pika>=9.0.0",
    "redis>=4.2.0",
    "onestep-mysql>=0.1.0",
    "onestep-sqs>=0.1.0",
]

[project.scripts]
onestep = "onestep.cli:main"

[tool.uv.workspace]
members = [
    "plugins/onestep-feishu-bitable",
    "plugins/onestep-mysql",
    "plugins/onestep-sqs",
]

[tool.uv.sources]
onestep-mysql = { workspace = true }
onestep-sqs = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onestep"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/Makefile",
    "/deploy",
    "/docker-compose.integration.yml",
    "/example",
    "/pyproject.toml",
    "/scripts",
    "/src/onestep",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "integration: live infrastructure tests",
]
