[project]
name = "onestep-control-plane"
version = "0.1.0"
description = "Control-plane reporter and WebSocket integration plugin for onestep."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "onestep>=1.5.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.entry-points."onestep.reporters"]
control_plane = "onestep_control_plane:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onestep_control_plane"]

[tool.uv.sources]
onestep = { workspace = true }
