[project]
name = "onestep-mysql"
version = "0.3.1"
description = "MySQL connector plugin for onestep."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "onestep>=1.7.1",
    "SQLAlchemy>=2.0.0",
    "PyMySQL>=1.1.0",
    "mysql-replication>=1.0.15",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.entry-points."onestep.resources"]
mysql = "onestep_mysql:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onestep_mysql"]

[tool.uv.sources]
onestep = { workspace = true }
