[project]
name = "onestep-mq"
version = "0.2.0"
description = "RabbitMQ connector plugin for onestep."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "onestep>=1.4.1",
    "aio-pika>=9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.entry-points."onestep.resources"]
rabbitmq = "onestep_rabbitmq:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onestep_rabbitmq"]

[tool.uv.sources]
onestep = { workspace = true }
