[project]
name = "onestep-redis"
version = "0.2.1"
description = "Redis connector plugin for onestep."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "onestep>=1.7.0",
    "redis>=4.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "onestep-control-plane>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "onestep-control-plane>=0.1.0",
]

[project.entry-points."onestep.resources"]
redis = "onestep_redis:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onestep_redis"]

[tool.uv.sources]
onestep = { workspace = true }
onestep-control-plane = { workspace = true }
