[project]
name = "onestep-sqs"
version = "0.2.0"
description = "Amazon SQS connector plugin for onestep."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "onestep>=1.4.1",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.entry-points."onestep.resources"]
sqs = "onestep_sqs:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onestep_sqs"]

[tool.uv.sources]
onestep = { workspace = true }
